--- a/experiments/cards.html
+++ b/experiments/cards.html
@@ -1,10 +1,20 @@
 <div>
   <!-- <img src="../assets/img/cards_svg/5_of_clubs.svg" style="z-index:1;position:relative;"></img> -->
   <!-- <img src="../assets/img/cards_svg/6_of_hearts.svg" style="z-index:2;position:relative;left:-100px"></img> -->
-  <img style="z-index:100;position:relative;width:15%;height:auto;left:0%" 
+  <img style="z-index:100;position:absolute;width:15%;height:auto;left:0%" 
        src="../assets/img/cards_svg/4_of_clubs.svg" data-reactid=".0.0">
-  <img style="z-index:101;position:relative;left:-10%;width:15%;height:auto;" 
+  <img style="z-index:101;position:absolute;left:2%;width:15%;height:auto;" 
        src="../assets/img/cards_svg/10_of_hearts.svg" data-reactid=".0.1">
-  <img style="z-index:101;position:relative;left:-20%;width:15%;height:auto;" 
-       src="../assets/img/cards_svg/9_of_spades.svg" data-reactid=".0.1">
+  <!-- <img style="z-index:101;position:relative;left:-20%;width:15%;height:auto;"  -->
+  <!--      src="../assets/img/cards_svg/9_of_spades.svg" data-reactid=".0.1"> -->
+  <!-- <img style="z-index:101;position:relative;left:-30%;width:15%;height:auto;"  -->
+  <!--      src="../assets/img/cards_svg/9_of_spades.svg" data-reactid=".0.1"> -->
+  <!-- <img style="z-index:101;position:relative;left:-40%;width:15%;height:auto;"  -->
+  <!--      src="../assets/img/cards_svg/9_of_spades.svg" data-reactid=".0.1"> -->
+  <!-- <img style="z-index:101;position:relative;left:-50%;width:15%;height:auto;"  -->
+  <!--      src="../assets/img/cards_svg/9_of_spades.svg" data-reactid=".0.1"> -->
+  <!-- <img style="z-index:101;position:relative;left:-60%;width:15%;height:auto;"  -->
+  <!--      src="../assets/img/cards_svg/9_of_spades.svg" data-reactid=".0.1"> -->
+  <!-- <img style="z-index:101;position:relative;left:-70%;width:15%;height:auto;"  -->
+  <!--      src="../assets/img/cards_svg/9_of_spades.svg" data-reactid=".0.1"> -->
 </div>
